components/otel-collector/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: otel-collector
  labels:
    app: otel-collector
    app.kubernetes.io/component: otel-collector
    app.kubernetes.io/instance: otel-collector
    app.kubernetes.io/name: otel-collector
    app.kubernetes.io/part-of: sasya-arogya
spec:
  ports:
    - name: otlp-grpc
      port: 4317
      protocol: TCP
      targetPort: 4317
    - name: otlp-http
      port: 4318
      protocol: TCP
      targetPort: 4318
    - name: prometheus
      port: 8889
      protocol: TCP
      targetPort: 8889
  selector:
    app: otel-collector
  sessionAffinity: None
  type: ClusterIP
